--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 name: "TRR",
                 lat: 21.1879646, 
                 long: 72.8644351
+            },
+            {
+                name: "TRR",
+                lat: 21.1879646, 
+                long: 72.8644351
             }
         ];
 
